# makura

./: Cargo.toml  README.md
.github/: CHANGELOG.md
.github/workflows/: rust-ci.yml
makura/: Cargo.toml  README.md  build.rs
makura/fuzz/: Cargo.toml
makura/fuzz/fuzz_targets/: fuzz_target_1.rs
makura/src/: base.rs  bases.rs  decoders.rs  encoders.rs  lib.rs  main.rs
makura/src/decoders/: base16.rs  base32.rs  base45.rs  base64.rs
makura/src/encoders/: base16.rs  base32.rs  base45.rs  base64.rs
makura/tests/: base16.rs  base32.rs  base32_hex.rs  base45.rs  base64.rs  base64_url.rs
makura_cli/: Cargo.toml  README.md
makura_cli/src/: main.rs
